@@ -20,9 +20,11 @@ Bugs in Pinmame that we are aware of:
 
  #5) Occasional pops/clicks on Capcom sound
 
- #6) Data East/Sega/Stern/Gottlieb DMD timing is not 100% accurate.
+ #6) Occasional pops/clicks on Whitestar II sound, only on high volume levels (~24 and above, for example on Nascar)
 
- #7) Sound gets cut off in Alvin G games sometimes, and some weird notes in World Tour occasionally
+ #7) Data East/Sega/Stern/Gottlieb DMD timing is not 100% accurate.
 
- #8) Slugfest will work with "pinmame -cheat sf_l1". Same goes for Theatre Of Magic home version (tom_14h).
+ #8) Sound gets cut off in Alvin G games sometimes, and some weird notes in World Tour occasionally
+
+ #9) Slugfest will work with "pinmame -cheat sf_l1". Same goes for Theatre Of Magic home version (tom_14h(c)).
      Alternately, check the "skip pinball startup test" in vpm.
